# astropy-tutorials

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rtd-environment.yml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Coordinates.html  DEPLOY.md  DEPLOY.rst  FITS-header.html  FITS-header_old.html  FITS-images.html  FITS-tables.html  FITS-tables_old.html  LICENSE  Makefile  Quantities.html  Quantities_old.html  README.md  README.rst  UVES.html  UVES_old.html  cfg.py  check_env.py  conda-environment.yml  contributing.html  deploy  deploy.sh  dev.html  documentation.html  edshift_plot.html  edshift_plot_old.html  environment.yml  examples.html  genindex.html  guides.html  index.html  (+18 more)
.circleci/: config.yml  gh-pages-push.sh  openssl_hack.cnf  rtd-push.sh
.github/: PULL_REQUEST_TEMPLATE.md  get_modified_tutorials.py
.travis/: setup_dependencies.sh  setup_environment.sh
Astropy_Learn_Mockups/: Astropy_Learn_Mockups.md
_sources/: dev.rst.txt  index.rst.txt
_static/: astropy.css  bootstrap-astropy.css  bootstrap-sphinx.css  documentation_options.js
binder/: requirements.txt
css/: style.css
docs/: Makefile  conf.py  dev.rst  index.rst
resources/: keywords.md
rst-tutorials/: 1-Coordinates-Intro.html  2-Coordinates-Transforms.html  3-Coordinates-Velocities.html  4-Coordinates-Crossmatch.html  Coordinates-Intro.html  Coordinates-Transform.html  FITS-cubes.html  FITS-header.html  FITS-images.html  FITS-tables.html  Models-Quick-Fit.html  UVES.html  User-Defined-Model.html  celestial_coords1.html  color-excess.html  conesearch.html  (+7 more)
(+1311 files in other folders)
